--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,10 @@
 }
 
 h1{
-    @apply text-2xl lg:text-4xl xl:text-7xl font-bold
+    @apply text-2xl lg:text-4xl xl:text-5xl font-medium text-center
 }
 h2{
-    @apply text-2xl lg:text-3xl xl:text-5xl font-bold
+    @apply text-2xl lg:text-3xl xl:text-4xl font-medium text-center
 }
 
 @layer base {
