--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,10 @@
 }
 
 h1{
-    @apply text-2xl lg:text-4xl xl:text-5xl font-medium text-center
+    @apply text-3xl lg:text-4xl xl:text-5xl font-medium
 }
 h2{
-    @apply text-2xl lg:text-3xl xl:text-4xl font-medium text-center
+    @apply text-2xl lg:text-3xl xl:text-4xl font-medium
 }
 
 @layer base {
